<resources>
    <string name="app_name">Calculator</string>

    <string name="LB_8">8</string>
    <string name="LB_9">9</string>
    <string name="LB_0">0</string>
    <string name="LB_5">5</string>
    <string name="LB_4">4</string>
    <string name="LB_6">6</string>
    <string name="LB_1">1</string>
    <string name="LB_2">2</string>
    <string name="LB_3">3</string>
    <string name="LB_7">7</string>

    <string name="default_time">00:10</string>
    <string name="right">Right</string>
    <string name="wrong">wrong</string>
    <string name="default_calculation">18 × 4 = ?</string>
    <string name="default_answer">265</string>

    <string name="valid">V</string>
    <string name="erase">D</string>

    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiplicate">×</string>
    <string name="divide">÷</string>
    <string name="all">- + * ÷</string>
    <string name="math_title">DigitClash</string>
    <string name="multiplication">x</string>
    <string name="aleatoire">ALEATOIRE</string>
    <string name="level_format">— Niveau %1$d/%2$d —</string>

    <string name="challenge">Challenge</string>
    <string name="timer">Timer</string>
    <string name="progress">Progress</string>
    <string name="digit_1_default">18</string>
    <string name="digit_2_default">4</string>
    <string name="equal_symbol">=</string>
    <string name="result_default">1</string>
    <string name="pause_button_content_description">Pause button</string>
    <string name="sign_in_with_google">Se connecter avec Google</string>
    <string name="default_web_client_id">304149019510-qalafqhgc5vv4kcup22jl6hm8ks7p4ll.apps.googleusercontent.com</string>
</resources>
