<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#F3F3F3"
    tools:context=".Activities.GameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="15pt"
        android:paddingTop="15pt"
        android:layout_weight="0.1"
        android:background="@color/colorButtonNumber"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:text="@string/default_time"
            android:layout_marginStart="10sp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginEnd="20sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_right_answer"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:gravity="center"
                android:src="@drawable/ic_right"
                android:contentDescription="@string/right" />

            <TextView
                android:id="@+id/right_answer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/LB_0"
                android:textColor="@color/colorText"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/iv_wrong_answer"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="10sp"
                android:gravity="center"
                android:src="@drawable/ic_wrong"
                android:contentDescription="@string/wrong" />

            <TextView
                android:id="@+id/wrong_answer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/LB_0"
                android:textColor="@color/colorText"
                android:textSize="40sp" />

        </LinearLayout>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calculation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorTextCalculation"
            android:text="@string/default_calculation"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/default_answer"
            android:textColor="@color/colorButtonNumber"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/group_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_1" />

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_2" />

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_4" />

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_5" />

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_7" />

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_8" />

            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/LB_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/erase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorErase"
                android:contentDescription="@string/erase"
                android:src="@drawable/ic_erase"
                android:text="D" />
            <Button
                style="@style/ButtonNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LB_0" />
            <ImageButton
                android:id="@+id/valid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorValid"
                android:layout_weight="1"
                android:src="@drawable/ic_check" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>