<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".Activities.MenuActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15pt"
        android:fontFamily="@font/fredoka_semibold"
        android:text="@string/math_title"
        android:textAlignment="center"
        android:textColor="@color/text_dark_blue"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5sp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <FrameLayout
            android:id="@+id/plus_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5sp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/text_dark_blue"
                app:cardCornerRadius="@dimen/card_corner_radius" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/game_button_shadow_offset"
                android:layout_marginBottom="@dimen/game_button_shadow_offset"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/button_yellow_strong"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:strokeColor="@color/text_dark_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_semibold"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_symbole" />
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/minus_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5sp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/text_dark_blue"
                app:cardCornerRadius="@dimen/card_corner_radius" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/game_button_shadow_offset"
                android:layout_marginBottom="@dimen/game_button_shadow_offset"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/button_red_coral"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:strokeColor="@color/text_dark_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_semibold"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_symbole" />
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/multi_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5sp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/text_dark_blue"
                app:cardCornerRadius="@dimen/card_corner_radius" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_multi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/game_button_shadow_offset"
                android:layout_marginBottom="@dimen/game_button_shadow_offset"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/button_orange_light"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:strokeColor="@color/text_dark_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_semibold"
                    android:text="@string/multiplication"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_symbole" />
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/divide_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5sp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/text_dark_blue"
                app:cardCornerRadius="@dimen/card_corner_radius" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/game_button_shadow_offset"
                android:layout_marginBottom="@dimen/game_button_shadow_offset"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/button_blue_light"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:strokeColor="@color/text_dark_blue"
                app:strokeWidth="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_semibold"
                    android:text="@string/divide"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_symbole" />
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>

    </GridLayout>

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/grid_layout"
        app:layout_constraintStart_toStartOf="@+id/grid_layout"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_challenge"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardCornerRadius="35dp"
                app:strokeColor="@color/text_dark_blue"
                app:strokeWidth="2dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@android:drawable/btn_star" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/challenge"
                android:fontFamily="@font/fredoka_semibold"
                android:textColor="@color/text_dark_blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_timer"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardCornerRadius="35dp"
                app:strokeColor="@color/text_dark_blue"
                app:strokeWidth="2dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@android:drawable/ic_menu_recent_history" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/timer"
                android:fontFamily="@font/fredoka_semibold"
                android:textColor="@color/text_dark_blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_progress"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardCornerRadius="35dp"
                app:strokeColor="@color/text_dark_blue"
                app:strokeWidth="2dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@android:drawable/ic_menu_upload" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/progress"
                android:fontFamily="@font/fredoka_semibold"
                android:textColor="@color/text_dark_blue" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
